--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -109,6 +109,9 @@ header {
 
 #projects img {
   box-shadow: 0 0 25px #d2d7d3;
+  /* width: 100%; */
+  /* flex: 1 1 0px;
+  max-width: 500px; */
   width: 100%;
 }
 
@@ -147,7 +150,7 @@ a {
 
 li {
   margin: 0 2%;
-  width: 25%;
+  width: fit-content;
 }
 
 section {
@@ -211,6 +214,7 @@ footer {
   align-items: center;
   flex-direction: row;
   justify-content: center;
+  gap: 10px;
 }
 
 #logo {
@@ -325,8 +329,7 @@ footer {
 }
 
 #sentinel span {
-  text-decoration: underline;
-  text-decoration-style: dotted;
+  color: #E07F00;
 }
 
 /* ---------------------------------
