--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -100,21 +100,6 @@ header {
   color: #000000;
 }
 
-
-#projects > ul {
-  -ms-align-items: flex-start;
-  align-items: flex-start;
-  margin-top: 75px;
-}
-
-#projects img {
-  box-shadow: 0 0 25px #d2d7d3;
-  /* width: 100%; */
-  /* flex: 1 1 0px;
-  max-width: 500px; */
-  width: 100%;
-}
-
 h4 {
   align-items: center;
   color: #450838;
@@ -214,7 +199,7 @@ footer {
   align-items: center;
   flex-direction: row;
   justify-content: center;
-  gap: 10px;
+  /* gap: 10px; */
 }
 
 #logo {
@@ -273,6 +258,7 @@ footer {
   flex-direction: column;
   gap: 20px;
   padding-top: 50px;
+  width: fit-content;
 }
 
 #sentinel > div {
@@ -330,6 +316,47 @@ footer {
 
 #sentinel span {
   color: #E07F00;
+}
+
+/* ---------------------------------
+
+              projects
+
+------------------------------------ */
+
+
+#projects h1 {
+  text-align: center;
+}
+#projects > ul {
+  /* -ms-align-items: flex-start;
+  align-items: flex-start; */
+  display: flex;
+  margin-top: 75px;
+  flex-wrap: wrap;
+}
+
+#projects li {
+  flex:1 0 45%;
+  text-align: center;
+  margin-bottom: 15px;
+}
+
+#projects img {
+  box-shadow: 0 0 25px #d2d7d3;
+  /* width: 75%; */
+  /* max-width: 1000px; */
+}
+
+#projects img, #projects p, #projects h4 {
+  /* width: 75%; */
+  max-width: 400px;
+  text-align: center;
+  margin: auto;
+}
+
+#projects h4 {
+  margin-top: 10px;
 }
 
 /* ---------------------------------
@@ -402,6 +429,11 @@ footer {
 
 
 @media(max-width: 920px) {
+  #sentinel div {
+    display: flex;
+    flex-direction: column;
+  }
+
   section {
     padding: 100px 15%;
   }
