adjust wide view bio max width

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -268,6 +268,10 @@ footer {
   text-decoration: underline;
 }
 
+.p-wide {
+  max-width: 500px;
+}
+
 /* ---------------------------------
 
                #sentinel
